{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 275,
  "lineage": "1cd60601-94be-6000-5bb1-9cece74c2924",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:security-group/sg-05a763e5431595abb",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-05a763e5431595abb",
            "name": "default",
            "tags": {
              "Environment": "SDLC",
              "Name": "relayers-choice-sdlc-sg",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05e950625156efff2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0747cb43e78fcaa9e",
            "association_id": "eipassoc-0ba7d047c26de2bd6",
            "domain": "vpc",
            "id": "eipalloc-0747cb43e78fcaa9e",
            "network_border_group": "us-east-2",
            "network_interface": "eni-09781a3fb6cd42885",
            "private_dns": "ip-10-0-100-13.us-east-2.compute.internal",
            "private_ip": "10.0.100.13",
            "public_dns": "ec2-18-190-102-122.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.102.122",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:network-acl/acl-0822d8ae2e5c2b189",
            "default_network_acl_id": "acl-0822d8ae2e5c2b189",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0822d8ae2e5c2b189",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "500822580415",
            "subnet_ids": [
              "subnet-002fabd78e8bf85d1",
              "subnet-0075a93c3e525ffe0",
              "subnet-02bbdcf0a7f4c4dab",
              "subnet-05c9b5ecf49b9c5a2",
              "subnet-0661ce92402d08bc6",
              "subnet-06b07858e6acd394f",
              "subnet-0963eb209fc5e95b0",
              "subnet-09996ae60b708a280",
              "subnet-0cbf0b6ea7de8a568",
              "subnet-0e48e6b340d5e1695"
            ],
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-stage-vpc",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "STAGE",
              "Name": "relayers-choice-stage-vpc",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05e950625156efff2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:route-table/rtb-07a1f10a6137d99e4",
            "default_route_table_id": "rtb-07a1f10a6137d99e4",
            "id": "rtb-07a1f10a6137d99e4",
            "owner_id": "500822580415",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-stage-vpc",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "STAGE",
              "Name": "relayers-choice-stage-vpc",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-05e950625156efff2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:security-group/sg-05a763e5431595abb",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-05a763e5431595abb",
            "ingress": [],
            "name": "default",
            "owner_id": "500822580415",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-stage-sg",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "STAGE",
              "Name": "relayers-choice-stage-sg",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05e950625156efff2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:internet-gateway/igw-04724230f98580a9e",
            "id": "igw-04724230f98580a9e",
            "owner_id": "500822580415",
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-igw",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "STAGE",
              "Name": "relayers-choice-igw",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05e950625156efff2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0747cb43e78fcaa9e",
            "connectivity_type": "public",
            "id": "nat-023fd51eac86cfb02",
            "network_interface_id": "eni-09781a3fb6cd42885",
            "private_ip": "10.0.100.13",
            "public_ip": "18.190.102.122",
            "subnet_id": "subnet-09996ae60b708a280",
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-ngw",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "STAGE",
              "Name": "relayers-choice-ngw",
              "Project": "relayers-choice",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-075618221ef045cec1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-023fd51eac86cfb02",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-075618221ef045cec",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04724230f98580a9e",
            "id": "r-rtb-041244e60d81b75bd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-041244e60d81b75bd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:route-table/rtb-075618221ef045cec",
            "id": "rtb-075618221ef045cec",
            "owner_id": "500822580415",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-023fd51eac86cfb02",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-stage-vpc",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "STAGE",
              "Name": "relayers-choice-stage-vpc",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e950625156efff2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:route-table/rtb-041244e60d81b75bd",
            "id": "rtb-041244e60d81b75bd",
            "owner_id": "500822580415",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04724230f98580a9e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-stage-vpc",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "STAGE",
              "Name": "relayers-choice-stage-vpc",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e950625156efff2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091fa4d3aed08126a",
            "route_table_id": "rtb-075618221ef045cec",
            "subnet_id": "subnet-02bbdcf0a7f4c4dab"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03609e547c2de2565",
            "route_table_id": "rtb-075618221ef045cec",
            "subnet_id": "subnet-0963eb209fc5e95b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a83eb1b98f9f7c21",
            "route_table_id": "rtb-075618221ef045cec",
            "subnet_id": "subnet-0661ce92402d08bc6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed0337c3e78d98b2",
            "route_table_id": "rtb-075618221ef045cec",
            "subnet_id": "subnet-0075a93c3e525ffe0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b055be2006bfb655",
            "route_table_id": "rtb-075618221ef045cec",
            "subnet_id": "subnet-0e48e6b340d5e1695"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcea6f7e110739d0",
            "route_table_id": "rtb-075618221ef045cec",
            "subnet_id": "subnet-06b07858e6acd394f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093516f48ce16af55",
            "route_table_id": "rtb-075618221ef045cec",
            "subnet_id": "subnet-05c9b5ecf49b9c5a2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b78dabba94cfe7e9",
            "route_table_id": "rtb-041244e60d81b75bd",
            "subnet_id": "subnet-09996ae60b708a280"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072d47ac31555bc76",
            "route_table_id": "rtb-041244e60d81b75bd",
            "subnet_id": "subnet-002fabd78e8bf85d1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061709bb159cd9c03",
            "route_table_id": "rtb-041244e60d81b75bd",
            "subnet_id": "subnet-0cbf0b6ea7de8a568"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:subnet/subnet-02bbdcf0a7f4c4dab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.32.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bbdcf0a7f4c4dab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "500822580415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-rds-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "STAGE",
              "Name": "relayers-choice-rds-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05e950625156efff2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:subnet/subnet-0963eb209fc5e95b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.34.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0963eb209fc5e95b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "500822580415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-rds-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "STAGE",
              "Name": "relayers-choice-rds-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05e950625156efff2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:subnet/subnet-0661ce92402d08bc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.42.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0661ce92402d08bc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "500822580415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-redis-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "STAGE",
              "Name": "relayers-choice-redis-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05e950625156efff2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:subnet/subnet-0075a93c3e525ffe0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.52.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0075a93c3e525ffe0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "500822580415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-redis-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "STAGE",
              "Name": "relayers-choice-redis-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05e950625156efff2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:subnet/subnet-0e48e6b340d5e1695",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e48e6b340d5e1695",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "500822580415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-private-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "STAGE",
              "Name": "relayers-choice-private-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05e950625156efff2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:subnet/subnet-06b07858e6acd394f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b07858e6acd394f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "500822580415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-private-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "STAGE",
              "Name": "relayers-choice-private-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05e950625156efff2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:subnet/subnet-05c9b5ecf49b9c5a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c9b5ecf49b9c5a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "500822580415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-private-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "STAGE",
              "Name": "relayers-choice-private-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05e950625156efff2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:subnet/subnet-09996ae60b708a280",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09996ae60b708a280",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "500822580415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-public-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "STAGE",
              "Name": "relayers-choice-public-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05e950625156efff2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:subnet/subnet-002fabd78e8bf85d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002fabd78e8bf85d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "500822580415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-public-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "STAGE",
              "Name": "relayers-choice-public-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05e950625156efff2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:subnet/subnet-0cbf0b6ea7de8a568",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.105.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbf0b6ea7de8a568",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "500822580415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-public-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "STAGE",
              "Name": "relayers-choice-public-subnet",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05e950625156efff2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:500822580415:vpc/vpc-05e950625156efff2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0822d8ae2e5c2b189",
            "default_route_table_id": "rtb-07a1f10a6137d99e4",
            "default_security_group_id": "sg-05a763e5431595abb",
            "dhcp_options_id": "dopt-e210d889",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05e950625156efff2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a1f10a6137d99e4",
            "owner_id": "500822580415",
            "tags": {
              "Environment": "STAGE",
              "Name": "relayers-choice-stage-vpc",
              "Project": "relayers-choice",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "STAGE",
              "Name": "relayers-choice-stage-vpc",
              "Project": "relayers-choice",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}